--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body class="mdc-typography body body--primary">
+    <main>
+      <!-- main-info -->
+      <%= require('html-loader!./html/main-info.html') %>
+    </main>
+  </body>
 </html>
