--- a/src/html/main-info.html
+++ b/src/html/main-info.html
@@ -11,7 +11,7 @@
   <ul class="main-info__github link-list reset-list-style">
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon"
+        class="link-list__link link link--icon link--icon-github"
         href="https://github.com/saloev"
         target="_blank"
       >
@@ -33,7 +33,7 @@
   <ul class="main-info__social-list link-list reset-list-style">
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon"
+        class="link-list__link link link--icon link--icon-vk"
         href="https://vk.com/"
         target="_blank"
         ><span class="sr-only">vk</span>
@@ -47,7 +47,7 @@
     </li>
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon"
+        class="link-list__link link link--icon link--icon-facebook"
         href="https://www.facebook.com/sadi.saloev"
         target="_blank"
         ><span class="sr-only">facebook</span>
@@ -61,7 +61,7 @@
     </li>
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon"
+        class="link-list__link link link--icon link--icon-twitter"
         href="https://twitter.com/sadisaloev"
         target="_blank"
         ><span class="sr-only">twitter</span>
@@ -74,4 +74,18 @@
       </a>
     </li>
   </ul>
+
+  <button class="btn-reset-default main-info__scroll-icon">
+    <svg
+      class="scroll-down-icon scroll-down-icon--animate"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+    >
+      <path
+        d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"
+      />
+    </svg>
+  </button>
 </section>
