feat: expastion panes basic styling

--- a/src/html/main-info.html
+++ b/src/html/main-info.html
@@ -1,7 +1,7 @@
 <section class="main-info section--full-height wrapper">
   <img
     loading="lazy"
-    src="../../assets/avatar.svg"
+    src="/../assets/avatar.svg"
     class="main-info__img"
     alt="Avatar"
   />
