--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <main>
       <!-- main-info -->
       <%= require('html-loader!./html/main-info.html') %>
+
+      <!-- education -->
+      <%= require('html-loader!./html/education.html') %>
     </main>
   </body>
 </html>
