feat: add expasions panel

--- a/src/html/main-info.html
+++ b/src/html/main-info.html
@@ -11,7 +11,7 @@
   <ul class="main-info__github link-list reset-list-style">
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon link--icon-github"
+        class="link-list__link link link--block link--icon link--icon-github"
         href="https://github.com/saloev"
         target="_blank"
       >
@@ -33,7 +33,7 @@
   <ul class="main-info__social-list link-list reset-list-style">
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon link--icon-vk"
+        class="link-list__link link link--block link--icon link--icon-vk"
         href="https://vk.com/"
         target="_blank"
         ><span class="sr-only">vk</span>
@@ -47,7 +47,7 @@
     </li>
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon link--icon-facebook"
+        class="link-list__link link link--block link--icon link--icon-facebook"
         href="https://www.facebook.com/sadi.saloev"
         target="_blank"
         ><span class="sr-only">facebook</span>
@@ -61,7 +61,7 @@
     </li>
     <li class="link-list__item">
       <a
-        class="link-list__link link link--icon link--icon-twitter"
+        class="link-list__link link link--block link--icon link--icon-twitter"
         href="https://twitter.com/sadisaloev"
         target="_blank"
         ><span class="sr-only">twitter</span>
