--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     />
     <title>Document</title>
   </head>
-  <body class="mdc-typography body body--primary body--text-color">
+  <body class="body body--primary body--text-color">
     <main>
       <!-- main-info -->
       <%= require('html-loader!./html/main-info.html') %>
