feat: add projects secton

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
 
       <!-- education -->
       <%= require('html-loader!./html/education.html') %>
+
+      <!--  -->
+      <%= require('html-loader!./html/projects.html') %>
     </main>
   </body>
 </html>
