fix: swiper on mobile

--- a/src/html/education.html
+++ b/src/html/education.html
@@ -1,4 +1,4 @@
-<section class="wrapper section section--full-height">
+<section class="wrapper section section--full-height scroll-section">
   <h2 class="section__title">Education</h2>
 
   <!--TODO rewrite to details summary https://habr.com/ru/post/465623/ -->
