--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,82 +1,81 @@
-<section class="section section--full-height wrapper projects">
+<section class="section section--full-height wrapper projects scroll-section">
   <h2 class=" section__title">Projects</h2>
 
-  <div class="projects__slider glide">
-    <div class="glide__track" data-glide-el="track">
-      <ul class="glide__slides">
-        <li class="glide__slide">
-          <section class="project-content">
-            <button
-              class="btn-reset-default projects__slider-toggle-btn project-content__btn"
-            >
-              Show description
-            </button>
-            <div class="project-content__content">
-              <h3 class="project-content__title">Theyalow</h3>
-              <ul
-                class="project-content__describe project-list reset-list-style"
-              >
-                <li class="project-list__item">BEM</li>
-                <li class="project-list__item">Responsive</li>
-              </ul>
-              <div class="project-content__info">
-                <span>Click image</span>
-                <img
-                  class="project-content__info-icon"
-                  src="../assets/arrow.svg"
-                  alt=""
-                />
-              </div>
+  <div class="projects__slider swiper-container">
+    <ul class="reset-list-style swiper-wrapper">
+      <li class="swiper-slide swiper-no-swiping">
+        <section class="project-content">
+          <button
+            class="btn-reset-default projects__slider-toggle-btn project-content__btn"
+          >
+            Show description
+          </button>
+          <div class="project-content__content">
+            <h3 class="project-content__title">Theyalow</h3>
+            <ul class="project-content__describe project-list reset-list-style">
+              <li class="project-list__item">BEM</li>
+              <li class="project-list__item">Responsive Design</li>
+              <li class="project-list__item">HTML</li>
+              <li class="project-list__item">CSS</li>
+            </ul>
+            <div class="project-content__info">
+              <span>Click image</span>
+              <img
+                class="project-content__info-icon"
+                src="../assets/arrow.svg"
+                alt=""
+              />
             </div>
+          </div>
 
-            <button
-              class="btn-reset-default project-content__link"
-              data-frame-type="theyalow"
-            ></button>
+          <button
+            class="btn-reset-default project-content__link"
+            data-frame-type="theyalow"
+          ></button>
 
-            <div class="project-content__info-mobile">Swipe</div>
-          </section>
-        </li>
-        <li class="glide__slide">
-          <section class="project-content">
-            <button
-              class="btn-reset-default projects__slider-toggle-btn project-content__btn"
-            >
-              Show description
-            </button>
-            <div class="project-content__content">
-              <h3 class="project-content__title">Theyalow</h3>
-              <ul
-                class="project-content__describe project-list reset-list-style"
-              >
-                <li class="project-list__item">BEM</li>
-                <li class="project-list__item">Responsive</li>
-              </ul>
-              <div class="project-content__info">
-                <span>Click image</span>
-                <img
-                  class="project-content__info-icon"
-                  src="../assets/arrow.svg"
-                  alt=""
-                />
-              </div>
+          <div class="project-content__info-mobile">Swipe</div>
+        </section>
+      </li>
+
+      <li class="swiper-slide swiper-no-swiping">
+        <section class="project-content">
+          <button
+            class="btn-reset-default projects__slider-toggle-btn project-content__btn"
+          >
+            Show description
+          </button>
+          <div class="project-content__content">
+            <h3 class="project-content__title">Repair design project</h3>
+            <ul class="project-content__describe project-list reset-list-style">
+              <li class="project-list__item">BEM</li>
+              <li class="project-list__item">Responsive Design</li>
+              <li class="project-list__item">HTML</li>
+              <li class="project-list__item">SCSS</li>
+              <li class="project-list__item">Webpack</li>
+            </ul>
+            <div class="project-content__info">
+              <span>Click image</span>
+              <img
+                class="project-content__info-icon"
+                src="../assets/arrow.svg"
+                alt=""
+              />
             </div>
+          </div>
 
-            <button
-              data-frame-type="repair-design-project"
-              class="btn-reset-default project-content__link project-content__link--repair-design"
-            ></button>
+          <button
+            data-frame-type="repair-design-project"
+            class="btn-reset-default project-content__link project-content__link--repair-design"
+          ></button>
 
-            <div class="project-content__info-mobile">Swipe</div>
-          </section>
-        </li>
-      </ul>
-    </div>
+          <div class="project-content__info-mobile">Swipe</div>
+        </section>
+      </li>
+    </ul>
 
-    <div data-glide-el="controls">
+    <div>
       <button
-        data-glide-dir="<<"
-        class="btn-reset-default slider-btn slider-btn--prev projects__slider-btn projects__slider-btn--prev"
+        class="btn-reset-default slider-btn swiper-button-prev slider-btn--prev projects__slider-btn projects__slider-btn--prev"
       >
         <img
           class="slider-btn__icon img--full"
@@ -85,8 +84,7 @@
         />
       </button>
       <button
-        data-glide-dir=">>"
-        class="btn-reset-default slider-btn slider-btn--next projects__slider-btn projects__slider-btn--next"
+        class="btn-reset-default slider-btn swiper-button-next slider-btn--next projects__slider-btn projects__slider-btn--next"
       >
         <img
           class="slider-btn__icon img--full"
