--- a/src/html/education.html
+++ b/src/html/education.html
@@ -1,4 +1,4 @@
-<section class="wrapper section section--full-height scroll-section">
+<section class="wrapper section section--full-height section--relative">
   <h2 class="section__title">Education</h2>
 
   <!--TODO rewrite to details summary https://habr.com/ru/post/465623/ -->
@@ -110,4 +110,18 @@
       </ul>
     </li>
   </ul>
+
+  <button class="btn-reset-default section__scroll-icon">
+    <svg
+      class="scroll-down-icon scroll-down-icon--animate"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+    >
+      <path
+        d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"
+      />
+    </svg>
+  </button>
 </section>
