--- a/src/html/main-info.html
+++ b/src/html/main-info.html
@@ -1,4 +1,4 @@
-<section class="main-info section--full-height wrapper scroll-section">
+<section class="main-info section--full-height wrapper section--relative">
   <img
     loading="lazy"
     src="../assets/avatar.svg"
@@ -75,7 +75,7 @@
     </li>
   </ul>
 
-  <button class="btn-reset-default main-info__scroll-icon">
+  <button class="btn-reset-default section__scroll-icon">
     <svg
       class="scroll-down-icon scroll-down-icon--animate"
       xmlns="http://www.w3.org/2000/svg"
