--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -33,7 +33,7 @@
             data-frame-type="theyalow"
           ></button>
 
-          <div class="project-content__info-mobile">Swipe</div>
+          <div class="project-content__info-mobile">Swipe &rarrhk;</div>
         </section>
       </li>
 
@@ -68,7 +68,7 @@
             class="btn-reset-default project-content__link project-content__link--repair-design"
           ></button>
 
-          <div class="project-content__info-mobile">Swipe</div>
+          <div class="project-content__info-mobile">Swipe &larrhk;</div>
         </section>
       </li>
     </ul>
